--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   },
   "devDependencies": {
     "prettier": "^2.6.2",
-    "typescript": "^4.7.2"
+    "typescript": "^4.7.2",
+    "@cicada-lang/sexp": "^0.0.24"
   },
   "license": "GPL-3.0-or-later"
 }
